--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,102 @@
-@media only screen and (max-width: 540px) {
+
+/* Laptop Device */
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
     .container{
-        width: 450px;
+        width: 950px;
+    }
+    .banner_title {
+        font-size: 30px;
+    }
+    .banner_para {
+        font-size: 14px;
+    }
+}
+/* Tablet Device */
+@media only screen and (min-width:768px) and (max-width: 991px) {
+    .container{
+        width: 750px;
+    }
+    .banner_content {
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 50px;
+        text-align: center;
+    }
+    .banner_img {
+        margin-left: 120px;
+    }
+    .collection_content {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .item_more {
+	text-align: left;
+    }
+}
+/* Medium Device */
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+    .container{
+        width: 600px;
+    }
+    .menu_area {
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    .serach_icon.mr-34{
+        margin-right: 10px;
+    }
+    .logo_title,
+    .menu {
+        margin-right: 100px;
+    }
+    .banner_content {
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 50px;
+        text-align: center;
+    }
+    .banner_title {
+        font-size: 35px;
+        line-height: 50px;
+        margin-right: 95px;
+    }
+    .banner_para {
+        margin: 16px 116px 16px 10px;
+    }
+    .banner_btn {
+        margin-right: 100px;
+    }
+    .banner_img {
+        width: 390px;
+        height: 390px;
+        margin-left: 30px;
+    }
+    .banner_img img {
+        width: 330px;
+        height: 380px;
+    }
+    .brand_content {
+        grid-template-columns: repeat(4,1fr);
+        grid-gap: 18px;
+    }
+    .collection_content {
+        grid-template-columns: repeat(1, 1fr);
+        margin-right: 120px;
+    }
+    .C_item_img img {
+        width: 100%;
+    }
+    .item_more {
+        text-align: left;
+    }
+    .footer_section{
+        width: 125%;
+    }
+}
+/* Moblie Device */
+@media only screen and (max-width: 480px) {
+    .container{
+        width: 350px;
+    }
+    .menu {
+        margin-right: 40px;
     }
     .menu ul {
         display: none;
@@ -14,19 +110,24 @@
         justify-content: center;
         text-align: center;
     }
+    .banner_para {
+        margin: 16px 25px 16px 0;
+    }
     .item1 {
         order: 2;
     }
     .banner_img {
-        width: 390px;
-        height: 390px;
+        width: 290px;
+        height: 290px;
     }
     .banner_img img {
-        width: 330px;
-        height: 390px;
+        width: 210px;
+        height: 290px;
     }
     .banner_title {
-        font-size: 40px;
+        font-size: 30px;
+        line-height: 40px;
+        margin-right: 20px;
     }
     .brand_content {
         grid-template-columns: repeat(4,1fr);
@@ -34,11 +135,15 @@
     }
     .collection_content {
         grid-template-columns: repeat(1, 1fr);
+        margin-right: 30px;
+    }
+    .item_more {
+        text-align: left;
     }
     .C_item_img img {
         width: 385px;
     }
     .footer_section {
-        width: 540px;
+        width: 100%;
     }
 }
