--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,20 @@ a .fa,
     border-radius: 50%;
     position: relative;
 }
+.banner_img img{
+    transition: transform .3s ease-in-out;
+    -webkit-transition: transform .3s ease-in-out;
+    -moz-transition: transform .3s ease-in-out;
+    -ms-transition: transform .3s ease-in-out;
+    -o-transition: transform .3s ease-in-out;
+}
+.banner_img:hover img{
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+}
 /* Background circle */
 .banner_img .circle_1 {
     width: 332px;
