--- a/css/responsive.css
+++ b/css/responsive.css
@@ -74,13 +74,14 @@
         margin-right: 100px;
     }
     .banner_img {
-        width: 390px;
-        height: 390px;
+        /* width: 390px;
+        height: 390px; */
         margin-left: 30px;
     }
-    .banner_img img {
-        width: 330px;
-        height: 380px;
+    .banner_img .banner_img_item {
+        /* width: 330px;
+        height: 380px; */
+        background-size: 440px;
     }
     .brand_content {
         grid-template-columns: repeat(4,1fr);
@@ -145,7 +146,7 @@
         width: 290px;
         height: 290px;
     }
-    .banner_img img {
+    .banner_img .banner_img_item {
         width: 210px;
         height: 290px;
     }
